Fix blue dropdown color on mobile browsers (#107)
This should fix https://github.com/hendricius/pizza-dough/issues/100

--- a/calculator/app/assets/stylesheets/styles.scss
+++ b/calculator/app/assets/stylesheets/styles.scss
@@ -134,6 +134,7 @@ a {
   border-width: 1px;
   box-sizing: border-box;
   font-size: 1.2rem;
+  color: #000;
 }
 
 .form-input:focus {
